--- a/chat-app-websocket-server-main/Dockerfile
+++ b/chat-app-websocket-server-main/Dockerfile
@@ -1,8 +1,10 @@
-FROM maven:3.9.6-eclipse-temurin-22-jammy as build
+# Етап 1: Будуємо додаток
+FROM maven:3.9.6-eclipse-temurin-22-jammy AS build
+WORKDIR /app
 COPY . .
 RUN mvn clean package -DskipTests
-
 FROM openjdk:22-jdk
-COPY --from=build /target/websocket_demo-0.0.1-SNAPSHOT.jar websocket_demo.jar
+WORKDIR /app
+COPY --from=build /app/target/websocket_demo-0.0.1-SNAPSHOT.jar websocket_demo.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "websocket_demo.jar"]
