--- a/chat-app-websocket-server-main/Dockerfile
+++ b/chat-app-websocket-server-main/Dockerfile
@@ -1,13 +1,8 @@
-FROM maven:3.9.6-eclipse-temurin-22-jammy AS build
-
-WORKDIR /app
+FROM maven:3.9.6-eclipse-temurin-22-jammy as build
 COPY . .
 RUN mvn -f /app/chat-app-websocket-server-main/pom.xml clean package -DskipTests
 
 FROM openjdk:22-jdk
-
-WORKDIR /app
-COPY --from=build /app/target/websocket_demo-0.0.1-SNAPSHOT.jar app.jar
-
+COPY --from=build /target/chat-app-websocket-server-main-0.0.1-SNAPSHOT.jar websocket_demo.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "websocket_demo.jar"]
